--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -71,7 +71,7 @@
                                 </form>
                             </div>
                             <div class="card-footer text-center">
-                                <div class="small"><a href="{% url 'users:registration' %}">Уже есть аккаунт? Авторизоваться</a></div>
+                                <div class="small"><a href="{% url 'users:login' %}">Уже есть аккаунт? Авторизоваться</a></div>
                             </div>
                         </div>
                     </div>
