--- a/products/templates/products/basket.html
+++ b/products/templates/products/basket.html
@@ -1,7 +1,7 @@
 {#проверяем пустая ли корзина - если что не отображаем#}
 {% if basket %}
     <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-    Корзина <span class="badge badge-secondary badge-pill">{{ total_quantity }}</span>
+    Корзина <span class="badge badge-secondary badge-pill">{{ basket.total_quantity }}</span>
 </h4>
     {% for object in basket %}
 <div class="card mb-3">
@@ -30,7 +30,7 @@
 <div class="card mb-3">
     <div class="card-footer">
         <p class="float-left">Итого</p>
-        <h4 class="float-right">{{ total_sum }}</h4>
+        <h4 class="float-right">{{ basket.total_sum }}</h4>
     </div>
 </div>
 <a class="btn btn-success btn-lg float-right" href="../orders/order-create.html">
